syntax = "proto3";

package zkkyc;

service DecryptZkKycToken {
    rpc DecryptZkKycToken(DecryptZkKycTokenRequest) returns (DecryptZkKycTokenResponse);
}

message AesKeyPointCipher {
    repeated string c1 = 1;
    repeated string c2 = 2;
}

message ParsedPublic {
    AesKeyPointCipher aes_key_point_cipher = 1;
    string encrypted_token = 2;
    string did_hv = 3;
    string did_v = 4;
    repeated string issuer_pub_key = 5;
    repeated string gov_pub_key = 6;
    string aes_key_xm_xor = 7;
}

message DecryptZkKycTokenRequest {
    ParsedPublic parsed_public = 1;
    string priv_key = 2;
}

message DecryptZkKycTokenResponse {
    string did_i = 1;
    string did_hi = 2;
    string did_hv = 3;
    string did_v = 4;
}
