syntax = "proto3";

package zkkyc;

service GenerateKeyPair {
    rpc GenerateKeyPair(GenerateKeyPairRequest) returns (GenerateKeyPairResponse);
}

service SignDidRecord {
    rpc SignDidRecord(SignDidRecordRequest) returns (SignDidRecordResponse);
}

message GenerateKeyPairRequest {
    string priv_key = 1;
}

message GenerateKeyPairResponse {
    string priv = 1;
    repeated string pub = 2;
}

message SignDidRecordRequest {
    string did_i = 1;
    string did_hi = 2;
    string priv_key = 3;
}

message SignDidRecordResponse {
    string s = 1;
    repeated string r = 2;
}
